# wedding_funcs

./: .gitignore  Cargo.toml  Dockerfile  README.md  create.sql  seed.sql
src/: api.rs  db.rs  func.rs  lambda.rs  lambda_integration.rs  lib.rs  main.rs  models.rs
terraform/: .terraform.lock.hcl  main.tf
terraform/dev/: .terraform.lock.hcl  main.tf
terraform/modules/: main.tf
terraform/prod/: main.tf
