[package]
name = "wedding_funcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["array-impls"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
