[package]
name = "wedding_funcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
lambda_runtime = "0.7.2"
openssl = { version = "0.10.55" }
postgres-openssl = "0.5.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["array-impls"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
